<resources>
    <string name="app_name">Popular Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="pref_sort_label">Sort by</string>
    <string name="pref_sort_key">sort</string>
    <string name="pref_sort_value">popularity.desc</string>
    <string name="pref_favorite_key">favorite</string>

    <string name="pref_sort_label_popularity">Popularity</string>
    <string name="pref_sort_label_rating">User Rating</string>
    <string name="pref_sort_value_popularity">popularity.desc</string>
    <string name="pref_sort_value_rating">vote_average.desc</string>
    <string name="title_activity_movie_detail">Movie Detail</string>

    <string name="title_synopsis">SYNOPSIS</string>
    <string name="textView_label_release_date">Release Date:&#160;</string>
    <string name="textView_label_user_rating">Rating:&#160;</string>
    <string name="textView_favorite">MARK AS FAVORITE</string>
    <string name="textView_favorited">IN YOUR FAVORITES</string>
    <string name="title_trailers">TRAILERS</string>
    <string name="title_reviews">REVIEWS</string>

    <string name="textView_no_trailers_found">No trailers found</string>
    <string name="textView_no_reviews_found">No reviews found</string>

    <!-- Menu -->
    <string name="action_user_rating">Sort by User Rating</string>
    <string name="action_popularity">Sort by Popularity</string>
    <string name="action_favourites_popularity">Favorites By Popularity</string>
    <string name="action_favourites_user_rating">Favorites By User Rating</string>

</resources>
