<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MovieListActivity">
      <item android:id="@+id/action_popularity"
          android:title="@string/action_popularity"
          android:orderInCategory="102"
          app:showAsAction="never"/>
      <item android:id="@+id/action_user_rating"
          android:title="@string/action_user_rating"
          android:orderInCategory="101"
          app:showAsAction="never"/>
      <item android:id="@+id/action_favourites_popularity"
          android:title="@string/action_favourites_popularity"
          android:orderInCategory="103"
          app:showAsAction="never"/>
    <item android:id="@+id/action_favourites_user_rating"
        android:title="@string/action_favourites_user_rating"
        android:orderInCategory="103"
        app:showAsAction="never"/>

</menu>
