<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            tools:context="ar.com.mobiledieguinho.popularmovies.MovieDetailActivityFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout   android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

        <ImageView android:id="@+id/imageView_backdrop"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_alignParentTop="true"
                   android:scaleType="fitXY"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">



            <ImageView android:id="@+id/imageView_poster"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_alignParentLeft="true"
                       android:layout_alignParentTop="true"
                       android:scaleType="fitXY"
                       android:paddingRight="15dp"
                />

            <TextView android:id="@+id/textView_title"
                      android:textSize="20sp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignTop="@id/imageView_poster"
                      android:layout_toRightOf="@id/imageView_poster"
                      android:textStyle="italic|bold"
                />

            <TextView android:id="@+id/textView_label_release_date"
                      android:textSize="14sp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignLeft="@id/textView_title"
                      android:layout_below="@id/textView_title"
                      android:text="@string/textView_label_release_date"
                      android:textStyle="italic"/>

            <TextView android:id="@+id/textView_release_date"
                      android:textSize="14sp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_toRightOf="@id/textView_label_release_date"
                      android:layout_alignBaseline="@id/textView_label_release_date"/>

            <TextView android:id="@+id/textView_label_user_rating"
                      android:textSize="14sp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignLeft="@id/textView_label_release_date"
                      android:layout_below="@id/textView_label_release_date"
                      android:text="@string/textView_label_user_rating"
                      android:textStyle="italic"/>

            <TextView android:id="@+id/textView_user_rating"
                      android:textSize="14sp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_toRightOf="@id/textView_label_user_rating"
                      android:layout_alignBaseline="@id/textView_label_user_rating"/>

            <TextView android:id="@+id/textView_favourite"
                      android:textSize="14sp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/textView_label_user_rating"
                      android:layout_alignLeft="@id/textView_label_user_rating"
                      android:text="@string/textView_favorite"
                      android:padding="10dp"
                      android:layout_marginTop="15dp"
                      android:background="@color/not_favourited"/>

        </RelativeLayout>

        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:background="@android:color/darker_gray"
              android:layout_marginTop="10dp"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"/>

        <TextView android:id="@+id/textView_separator_synopsis"
                  android:textSize="20sp"
                  android:text="@string/title_synopsis"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:layout_gravity="center_horizontal"
                  android:layout_margin="5dp"/>

        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:background="@android:color/darker_gray"
              android:layout_marginBottom="10dp"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"/>

        <TextView android:id="@+id/textView_synopsis"
                  android:textSize="14sp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"/>
    </LinearLayout>
</ScrollView>